# EHF-Relay

./: .gitignore  Dockerfile  README.md  gitlab-ci.yaml  pyproject.toml
ehf_relay/: __init__.py  __main__.py  config.py  credentials.py  model.py  parse.py
ehf_relay/fetch/: __init__.py  unit4.py
tests/: test_main.py  test_parse.py  util.py
tests/data/: __init__.py  example1.xml
tests/data/ehf/: __init__.py
tests/data/unit4/: inbox-response1.xml  inbox-response2-1.xml  inbox-response2-2.xml  inbox-response2-3.xml
tests/mocked/: test_main.py  test_parse.py
tests/mocked/fetch/: test_unit4.py
