[tool.poetry]
name = "ehfrelay"
version = "0.1.0"
description = ""
authors = ["Anders Lehn Reed <anders.lehn.reed@gmail.com>"]
license = "Affero GPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^6.1.1"
sbdh-ubl-data = "^0.1.1"

[tool.poetry.dev-dependencies]
pylint = "^3.3.7"
pytest = "^8.3.5"
black = "^25.1.0"
bandit = "^1.8.3"
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
