[tool.poetry]
name = "ehf-relay"
version = "0.1.0"
description = ""
authors = ["Anders Lehn Reed <anders.lehn.reed@gmail.com>"]
license = "Affero GPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
sbdh-ubl-data = "^0.1.1"
requests = "^2.32.3"
defusedxml = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
bandit = "^1.8.3"
ruff = "^0.11.11"
pypdf = "^5.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
